--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
+
+    //Scalable size unit
+    api "com.intuit.sdp:sdp-android:1.0.6"
+    api "com.intuit.ssp:ssp-android:1.0.6"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
