--- a/shared-deps.gradle
+++ b/shared-deps.gradle
@@ -1,19 +1,17 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
 
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.danielwaiguru.remoter"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,28 +30,16 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dynamicFeatures = [':features:onboarding']
 }
-
 dependencies {
-    implementation project(':features:auth')
-    implementation project(':features:dashboard')
-    implementation project(':features:job_details')
+    implementation project(":shared")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    //Navigation
-    api 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    api 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    api "androidx.navigation:navigation-dynamic-features-fragment:2.3.5"
-
-    //Scalable size unit
-    api "com.intuit.sdp:sdp-android:1.0.6"
-    api "com.intuit.ssp:ssp-android:1.0.6"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "com.intuit.sdp:sdp-android:1.0.6"
+    implementation "com.intuit.ssp:ssp-android:1.0.6"
 }
