Add Onboarding screens

--- a/features/job_details/src/main/AndroidManifest.xml
+++ b/features/job_details/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.danielwaiguru.jon_details">
+    package="com.danielwaiguru.remoter.job_details">
 
 </manifest>
