--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,10 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Remoter"
-include ':app'
-include ':features:auth', ':features:onboarding', ':features:dashboard', ':features:job_details'
-include ':shared'
-include ':core'
+include ':app', ':shared', ':core', ':features:auth', ':features:dashboard', ':features:job_details'
+/*include ':features:auth'*/
+include ':features:onboarding'
+/*include ':features:dashboard'
+include ':features:job_details'
+include
+include ':core'*/
