--- a/features/onboarding/build.gradle
+++ b/features/onboarding/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.danielwaiguru.onboarding"
+        applicationId "com.danielwaiguru.remoter.onboarding"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -28,7 +28,7 @@ android {
 
 dependencies {
     implementation project(":app")
-    implementation project(":shared")
+    implementation project(':shared')
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
