--- a/features/onboarding/build.gradle
+++ b/features/onboarding/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.dynamic-feature'
     id 'kotlin-android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 android {
     compileSdk 31
