--- a/shared-deps.gradle
+++ b/shared-deps.gradle
@@ -1,6 +1,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 android {
     compileSdk 31
 
