--- a/features/dashboard/build.gradle
+++ b/features/dashboard/build.gradle
@@ -1,6 +1,8 @@
 
 apply from: "$rootProject.projectDir/shared-deps.gradle"
+apply plugin: 'kotlin-android'
 dependencies {
     implementation project(":core")
     implementation "com.airbnb.android:lottie:4.1.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
