Add link to job application page

--- a/features/job_details/build.gradle
+++ b/features/job_details/build.gradle
@@ -2,5 +2,7 @@ apply from: "$rootProject.projectDir/shared-deps.gradle"
 
 dependencies {
     implementation project(":core")
+    //Flex Box
+    implementation "com.google.android:flexbox:2.0.1"
 }
 
