--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ dependencyResolutionManagement {
 rootProject.name = "Remoter"
 include ':app', ':shared', ':core', ':features:auth', ':features:dashboard', ':features:job_details'
 include ':features:onboarding'
+include ':logging'
