--- a/logging/build.gradle
+++ b/logging/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     //Timber
-    implementation "com.jakewharton.timber:timber:5.0.1"
+    api "com.jakewharton.timber:timber:5.0.1"
 
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
